fix(ButtonLayout.scss): the `dark-no-border` theme now respects the absence of the `hover` prop, and does not change text color upon mouse enter.

--- a/src/ButtonLayout/ButtonLayout.scss
+++ b/src/ButtonLayout/ButtonLayout.scss
@@ -629,8 +629,10 @@ $base-transition: all 100ms linear;
     color: #fff;
     @extend .t1_2;
 
-    &:hover {
-        color: $B10;
+    &.hover {
+        &:hover {
+            color: $B10;
+        }
     }
 
     &.heightx-large {
